# ex1-jjoderis

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  fuzz.sh  generator.cpp  main.cpp  nested-simplify.smt2  spacing.smt2  test.smt2
src/AST/: AST.cpp  AST.h
src/Lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/SMTEvaluation/: Evaluation.cpp  Evaluation.h
src/SMTFile/: SMTFile.cpp  SMTFile.h
tests/: CMakeLists.txt
tests/Lexer/: Lexer.test.cpp
